--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,13 +4,13 @@ on: workflow_dispatch
 
 jobs:
   cache:
-    environment: production
+#     environment: production
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/cache@v2
         with:
-          path: ~/cache
+          path: cache
           key: cache_key
       - run: |
-          cat ~/cache
+          cat cache
