--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,7 @@ on: workflow_dispatch
 
 jobs:
   cache:
-#     environment: production
+    environment: production
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
